# namedarg

./: .gitignore  Cargo.toml  README.md  release.py  test-on-rust-tree.sh
common/: main.rs  rlex.rs
common-build/: set-feature-unless-nightly.rs
namedarg/: Cargo.toml
namedarg/src/: lib.rs
namedarg/tests/: test.rs
namedarg_hack/: Cargo.toml  common-build
namedarg_hack/src/: lib.rs  stub.rs
namedarg_plugin/: Cargo.toml  test-on-rust-tree.sh
namedarg_plugin/src/: lib.rs  rlex.rs  stub.rs  ttrw_libsyntax.rs  ttrw_rlex.rs
namedarg_rustc_macro/: Cargo.toml
namedarg_rustc_macro/src/: lib.rs  macros11.rs  main.rs  namedarg.rs  nightly.rs  rlex.rs  ttrw_libsyntax.rs  ttrw_rlex.rs
namedarg_test_file/: Cargo.toml
namedarg_test_file/src/: test_file.rs
src/: lib.rs  rlex.rs  rparse.rs  ttrw_libsyntax.rs  ttrw_rlex.rs  ttrw_rparse.rs
tests/: test.rs
