[package]
name = "namedarg"
version = "0.1.0"
authors = ["comex <comexk@gmail.com>"]
build = "../common-build/set-feature-unless-nightly.rs"

[lib]
crate-type = ["rlib"]

[features]
force_macros11_mode = []

[dependencies.namedarg_plugin]
version = "0.1.0"
features = []
path = "../namedarg_plugin"

[dependencies.namedarg_rustc_macro]
version = "0.1.0"
features = []
path = "../namedarg_rustc_macro"

