[package]
name = "namedarg"
version = "0.1.2"
authors = ["comex <comexk@gmail.com>"]
description = "namedarg main package"
repository = "https://github.com/comex/namedarg"
license = "MIT"

[lib]
crate-type = ["rlib"]

[features]
force_macros11_mode = ["namedarg_rustc_macro/force_macros11_mode"]

[dependencies.namedarg_rustc_macro]
version = "= 0.1.2"
path = "../namedarg_rustc_macro"

