[package]
name = "namedarg_hack"
version = "0.1.3"
authors = ["comex <comexk@gmail.com>"]
description = "namedarg main package"
repository = "https://github.com/comex/namedarg"
license = "MIT"
build = "common-build/set-feature-unless-nightly.rs"

[lib]
crate_type = ["dylib"]
path = "src/stub.rs"

[features]
force_macros11_mode = []
