[package]
name = "namedarg_test_file"
version = "0.1.0"
authors = ["comex <comexk@gmail.com>"]
build = "common-build/set-feature-unless-nightly.rs"

[[bin]]
name = "test_file"
path = "src/test_file.rs"

[dependencies]

[features]
derive_debug = []
println_spam = ["derive_debug"]
force_macros11_mode = []
